--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     }).addTo(map);
 
     // 👇 À PERSONNALISER
-    const airlineCode = 'FFA'; // Remplace par le code de ta compagnie
-    const apiKey = 'VOTRE_CLE_API_ICI';
+    const airlineCode = 'AZH'; // Remplace par le code de ta compagnie
+    const apiKey = 'Ddlv4LFP33ahvSQi5cAOxyI7899dxbAX1HGgHt4QpHxLx2OZuf6VmRkjx9lf';
 
     fetch(`https://api.fshub.io/api/v3/airlines/${airlineCode}/flights/live`, {
       headers: { 'x-api-key': apiKey }
