--- a/index.html
+++ b/index.html
@@ -1,46 +1,272 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Live FsHub Map</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-  <style>
-    #map { height: 100vh; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Carte avec marqueurs</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet-measure/dist/leaflet-measure.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+        }
+        #sidebar {
+            width: 250px;
+            background: #f4f4f4;
+            padding: 10px;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+            overflow-y: auto;
+        }
+        #map {
+            flex-grow: 1;
+            height: 100vh;
+            min-width: 500px;
+        }
+        .info-box {
+            margin-bottom: 10px;
+            padding: 10px;
+            background: white;
+            border: 1px solid #ccc;
+        }
+        .toggle-button {
+            background: #007BFF;
+            color: white;
+            padding: 10px;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            margin-top: 5px;
+        }
+        .toggle-button:hover {
+            background: #0056b3;
+        }
+        .checkbox-group {
+            margin-top: 20px;
+        }
+        .category-group {
+            margin-top: 20px;
+        }
+        .category-group h4 {
+            font-size: 16px;
+            font-weight: bold;
+        }
+        .category-checkboxes {
+            display: none;
+            margin-left: 20px;
+        }
+        .category-checkboxes label {
+            display: block;
+        }
+        .category-group.open .category-checkboxes {
+            display: block;
+        }
+
+        /* Ajouter les styles pour aligner préfixe et numéro sur la même ligne */
+        #customCallsignFields {
+            display: flex;
+            gap: 10px;
+            margin-top: 5px;
+        }
+
+        #customCallsignFields input {
+            width: 80px; /* Taille ajustée */
+        }
+    </style>
 </head>
 <body>
-  <div id="map"></div>
+    <div id="sidebar">
+        <h2>Sélection des aéroports</h2>
+        <div class="info-box">
+            Départ: <span id="departure" class="clickable">Non sélectionné</span>
+            <input type="text" id="departureInput" style="display:none" placeholder="Entrez un aéroport">
+        </div>
+        <div class="info-box">
+            Arrivée: <span id="arrival" class="clickable">Non sélectionné</span>
+            <input type="text" id="arrivalInput" style="display:none" placeholder="Entrez un aéroport">
+        </div>
+        <div class="info-box">
+            <label>Callsign :</label>
+            <span style="font-weight:bold;" id="callsignDisplayPrefix">AZH</span>-<span id="callsignDisplayNumber">201</span>
+            <select id="callsign" name="callsign">
+                <option value="">Sélectionner un numéro</option>
+                <option value="201">201</option>
+                <option value="202">202</option>
+                <option value="203">203</option>
+                <option value="204">204</option>
+                <option value="205">205</option>
+                <option value="206">206</option>
+                <option value="FR">FR</option>
+                <option value="US">US</option>
+                <option value="ACC">ACC</option>
+                <option value="501">501</option>
+                <option value="502">502</option>
+                <option value="503">503</option>
+                <option value="504">504</option>
+                <option value="505">505</option>
+                <option value="506">506</option>
+                <option value="507">507</option>
+                <option value="other">Autre (saisir un callsign)</option>
+            </select>
+            <div id="customCallsignFields" style="display:none;">
+                <input type="text" id="customAirline" placeholder="Préfixe (ex: XYZ)">
+                <input type="text" id="customNumber" placeholder="Numéro (ex: 123)">
+            </div>
+        </div>
 
-  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-  <script>
-    const map = L.map('map').setView([48.8566, 2.3522], 5); // Centré sur la France
+        <button id="generateLinkButton" class="toggle-button">Générer le plan de vol</button>
+        <button id="resetSelectionButton" class="toggle-button">Réinitialiser les aéroports</button>
+        <div id="distanceBox" class="info-box" style="display:none;">
+            Distance: <span id="distance">0</span> milles nautiques<br>
+            Temps de vol: <span id="flightTime">0</span> heures
+        </div>
 
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      maxZoom: 18,
-    }).addTo(map);
+        <h3>Afficher par catégorie</h3>
+        <div id="categoryCheckboxes" class="checkbox-group"></div>
 
-    // 👇 À PERSONNALISER
-    const airlineCode = 'AZH'; // Remplace par le code de ta compagnie
-    const apiKey = 'Ddlv4LFP33ahvSQi5cAOxyI7899dxbAX1HGgHt4QpHxLx2OZuf6VmRkjx9lf';
+        <!-- RADAR FSHub intégré -->
+        <div class="info-box">
+            <h3 style="margin-bottom:10px;">Radar en temps réel</h3>
+            <iframe 
+                src="https://fshub.io/airline/AZH/radar" 
+                width="100%" 
+                height="300" 
+                style="border:none;" 
+                loading="lazy">
+            </iframe>
+        </div>
+    </div>
 
-    fetch(`https://api.fshub.io/api/v3/airlines/${airlineCode}/flights/live`, {
-      headers: { 'x-api-key': apiKey }
-    })
-    .then(response => response.json())
-    .then(data => {
-      if (data.length === 0) {
-        alert("Aucun vol en cours.");
-      }
-      data.forEach(flight => {
-        const { latitude, longitude } = flight.location;
-        const marker = L.marker([latitude, longitude]).addTo(map);
-        marker.bindPopup(`<b>${flight.pilot_name}</b><br>${flight.aircraft_registration}`);
-      });
-    })
-    .catch(err => {
-      console.error(err);
-      alert("Erreur lors de la récupération des données.");
-    });
-  </script>
+    <div id="map"></div>
+
+    <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+    <script>
+        const callsignSelect = document.getElementById('callsign');
+        const customFields = document.getElementById('customCallsignFields');
+        const customAirline = document.getElementById('customAirline');
+        const customNumber = document.getElementById('customNumber');
+        const callsignDisplayPrefix = document.getElementById('callsignDisplayPrefix');
+        const callsignDisplayNumber = document.getElementById('callsignDisplayNumber');
+
+        callsignSelect.addEventListener('change', function () {
+            if (this.value === 'other') {
+                customFields.style.display = 'flex';  // Affiche les champs sur une même ligne
+                customAirline.focus();
+                callsignDisplayPrefix.innerText = ''; // Ne rien afficher pour le préfixe
+                callsignDisplayNumber.innerText = ''; // Ne rien afficher pour le numéro
+            } else {
+                customFields.style.display = 'none';
+                callsignDisplayPrefix.innerText = "AZH"; // Affiche le préfixe
+                callsignDisplayNumber.innerText = this.value; // Affiche le numéro sélectionné
+            }
+        });
+
+        function getCallsignFinal() {
+            if (callsignSelect.value === 'other') {
+                const prefix = customAirline.value.trim().toUpperCase();
+                const number = customNumber.value.trim();
+                return prefix && number ? prefix + number : "";
+            } else {
+                return "AZH" + callsignSelect.value;
+            }
+        }
+
+        function updateCallsign() {
+            const finalCallsign = getCallsignFinal();
+            if (finalCallsign) {
+                const prefix = finalCallsign.slice(0, 3); // Les 3 premiers caractères sont le préfixe
+                const number = finalCallsign.slice(3); // Le reste est le numéro
+                callsignDisplayPrefix.innerText = prefix;
+                callsignDisplayNumber.innerText = number;
+            }
+        }
+
+        customAirline.addEventListener('input', updateCallsign);
+        customNumber.addEventListener('input', updateCallsign);
+
+        const map = L.map('map').setView([20, 0], 2);
+        L.tileLayer('https://{s}.tile.openstreetmap.fr/osmfr/{z}/{x}/{y}.png', {
+            attribution: '&copy; OpenStreetMap contributeurs'
+        }).addTo(map);
+
+        const layers = {}; // Chaque catégorie sera un layer distinct
+        let departureMarker = null;
+        let arrivalMarker = null;
+        let currentSelection = ''; // Suivi de la sélection Départ/Arrivée
+        let routeLine = null;  // Variable pour stocker la ligne tracée
+
+        // Fonction pour gérer l'entrée manuelle d'aéroport
+        function handleAirportInput(inputId, markerType) {
+            const input = document.getElementById(inputId);
+            const name = input.value.trim();
+            if (name) {
+                // Recherche de l'aéroport via OpenStreetMap API
+                fetch(`https://nominatim.openstreetmap.org/search?format=json&q=${name}`)
+                    .then(response => response.json())
+                    .then(data => {
+                        if (data && data.length > 0) {
+                            const lat = parseFloat(data[0].lat);
+                            const lon = parseFloat(data[0].lon);
+                            const popupMessage = `${name}<br>Latitude: ${lat}<br>Longitude: ${lon}`;
+                            
+                            // En fonction de l'aéroport de départ ou d'arrivée, on place le marqueur
+                            if (markerType === 'departure') {
+                                if (departureMarker) {
+                                    map.removeLayer(departureMarker); // Retirer le précédent marqueur
+                                }
+                                departureMarker = L.marker([lat, lon]).addTo(map).bindPopup(popupMessage);
+                            } else {
+                                if (arrivalMarker) {
+                                    map.removeLayer(arrivalMarker); // Retirer le précédent marqueur
+                                }
+                                arrivalMarker = L.marker([lat, lon]).addTo(map).bindPopup(popupMessage);
+                            }
+                            map.setView([lat, lon], 6); // Centre la carte sur l'aéroport
+
+                            // Mise à jour des valeurs des aéroports
+                            document.getElementById(markerType).innerText = name;
+                            document.getElementById(`${markerType}Input`).style.display = 'none';
+                            currentSelection = ''; // Réinitialisation de la sélection
+                        }
+                    })
+                    .catch(error => alert('Erreur lors de la recherche de l\'aéroport'));
+            }
+        }
+
+        // Ajout d'événements pour gérer les entrées d'aéroport
+        document.getElementById('departure').addEventListener('click', function () {
+            document.getElementById('departureInput').style.display = 'block';
+        });
+        document.getElementById('arrival').addEventListener('click', function () {
+            document.getElementById('arrivalInput').style.display = 'block';
+        });
+        document.getElementById('departureInput').addEventListener('blur', function () {
+            handleAirportInput('departureInput', 'departure');
+        });
+        document.getElementById('arrivalInput').addEventListener('blur', function () {
+            handleAirportInput('arrivalInput', 'arrival');
+        });
+
+        // Fonction pour calculer la distance et le temps de vol
+        function calculateFlight() {
+            if (departureMarker && arrivalMarker) {
+                const latlng1 = departureMarker.getLatLng();
+                const latlng2 = arrivalMarker.getLatLng();
+                const distance = latlng1.distanceTo(latlng2) / 1852; // Conversion en milles nautiques
+                const speed = 480; // Vitesse moyenne en nœuds (480 nœuds)
+                const flightTime = distance / speed; // Temps de vol en heures
+
+                // Affichage de la distance et du temps
+                document.getElementById('distance').innerText = distance.toFixed(2);
+                document.getElementById('flightTime').innerText = flightTime.toFixed(2);
+                document.getElementById('distanceBox').style.display = 'block';
+            }
+        }
+
+        // Ajout du bouton pour générer le plan de vol
+        document.getElementById('generateLinkButton').addEventListener('click', calculateFlight);
+    </script>
 </body>
 </html>
