--- a/index.html
+++ b/index.html
@@ -110,10 +110,8 @@
                 <span class="close">&times;</span>
             </div>
             <div class="modal-body">
-                <p>Le radar est affiché ci-dessous :</p>
-                <div style="height: 400px; overflow: hidden;">
-                    <iframe src="https://fshub.io/airline/AZH/radar" width="100%" height="100%" style="border: none;"></iframe>
-                </div>
+                <p>Le radar est disponible via le lien ci-dessous. Cliquez pour l'ouvrir :</p>
+                <a href="https://fshub.io/airline/AZH/radar" target="_blank" class="toggle-button">Ouvrir le Radar</a>
             </div>
             <div class="modal-footer">
                 <button id="closeModalButton" class="toggle-button">Fermer</button>
