--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Radar en Temps Réel</title>
+  <!-- Font Awesome pour les icônes -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,20 +13,22 @@
       padding: 0;
       display: flex;
     }
+
     #sidebar {
       width: 250px;
       background: #f4f4f4;
       padding: 10px;
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
       overflow-y: auto;
-      height: 100vh;
     }
+
     .info-box {
       margin-bottom: 10px;
       padding: 10px;
       background: white;
       border: 1px solid #ccc;
     }
+
     .toggle-button {
       background: #007BFF;
       color: white;
@@ -33,8 +37,18 @@
       cursor: pointer;
       width: 100%;
       margin-top: 5px;
-      border-radius: 5px;
+      font-size: 16px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      border-radius: 6px;
     }
+
+    .toggle-button i {
+      font-size: 18px;
+    }
+
     .toggle-button:hover {
       background: #0056b3;
     }
@@ -42,7 +56,7 @@
     .modal {
       display: none;
       position: fixed;
-      z-index: 999;
+      z-index: 1;
       left: 0;
       top: 0;
       width: 100%;
@@ -53,13 +67,12 @@
 
     .modal-content {
       background-color: #fff;
-      margin: 10% auto;
+      margin: 15% auto;
       padding: 20px;
       width: 80%;
-      max-width: 500px;
-      border-radius: 8px;
+      max-width: 600px;
       position: relative;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+      border-radius: 10px;
     }
 
     .modal-header {
@@ -88,28 +101,26 @@
       text-decoration: none;
       cursor: pointer;
     }
-
-    #content {
-      flex-grow: 1;
-      padding: 20px;
-    }
   </style>
 </head>
 <body>
   <div id="sidebar">
     <h2>Radar FSHub</h2>
     <div class="info-box">
-      <p>Affichez le radar en temps réel en cliquant sur le bouton ci-dessous :</p>
-      <button id="showRadarButton" class="toggle-button">Afficher le Radar</button>
+      <p>Suivez nos vols en direct grâce à notre radar temps réel :</p>
+      <!-- Bouton avec icône radar -->
+      <button id="showRadarButton" class="toggle-button">
+        <i class="fas fa-satellite-dish"></i> Afficher le Radar
+      </button>
     </div>
   </div>
 
-  <div id="content">
-    <h1>Bienvenue dans l'application</h1>
-    <p>Contenu principal ici...</p>
+  <!-- Contenu principal -->
+  <div id="content" style="flex-grow: 1; padding: 20px;">
+    <!-- Tu peux mettre ici des infos sur les vols, pilotes, météo, etc. -->
   </div>
 
-  <!-- Fenêtre modale -->
+  <!-- Modale -->
   <div id="myModal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
@@ -117,12 +128,15 @@
         <span class="close">&times;</span>
       </div>
       <div class="modal-body">
-        <p>FSHub n'autorise pas l'intégration directe du radar dans cette page.</p>
-        <p>Cliquez ci-dessous pour l’ouvrir dans une nouvelle fenêtre :</p>
-        <button onclick="openRadar()" class="toggle-button">Ouvrir le Radar</button>
+        <p>Le radar est accessible dans une nouvelle fenêtre :</p>
+        <a href="https://fshub.io/airline/AZH/radar" target="_blank" class="toggle-button">
+          <i class="fas fa-external-link-alt"></i> Ouvrir le Radar
+        </a>
       </div>
       <div class="modal-footer">
-        <button id="closeModalButton" class="toggle-button">Fermer</button>
+        <button id="closeModalButton" class="toggle-button">
+          <i class="fas fa-times-circle"></i> Fermer
+        </button>
       </div>
     </div>
   </div>
@@ -141,19 +155,11 @@
       modal.style.display = "none";
     }
 
-    function openRadar() {
-      window.open(
-        'https://fshub.io/airline/AZH/radar',
-        '_blank',
-        'width=1200,height=800,noopener,noreferrer'
-      );
-    }
-
     showRadarButton.addEventListener('click', openRadarModal);
     closeModalButton.addEventListener('click', closeRadarModal);
     closeModalSpan.addEventListener('click', closeRadarModal);
 
-    window.addEventListener('click', function (event) {
+    window.addEventListener('click', function(event) {
       if (event.target === modal) {
         closeRadarModal();
       }
