--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Radar en Temps Réel</title>
   <!-- Font Awesome pour les icônes -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -12,6 +12,7 @@
       margin: 0;
       padding: 0;
       display: flex;
+      background-color: #eef2f3;
     }
 
     #sidebar {
@@ -43,16 +44,23 @@
       justify-content: center;
       gap: 10px;
       border-radius: 6px;
-    }
-
-    .toggle-button i {
-      font-size: 18px;
+      transition: background 0.3s ease;
     }
 
     .toggle-button:hover {
       background: #0056b3;
     }
 
+    .toggle-button i {
+      font-size: 18px;
+    }
+
+    #content {
+      flex-grow: 1;
+      padding: 20px;
+    }
+
+    /* MODAL STYLING */
     .modal {
       display: none;
       position: fixed;
@@ -63,27 +71,53 @@
       height: 100%;
       background-color: rgba(0, 0, 0, 0.4);
       overflow: auto;
+      animation: fadeIn 0.3s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
     }
 
     .modal-content {
       background-color: #fff;
-      margin: 15% auto;
+      margin: 5% auto;
       padding: 20px;
-      width: 80%;
-      max-width: 600px;
+      width: 90%;
+      max-width: 700px;
       position: relative;
-      border-radius: 10px;
+      border-radius: 12px;
+      box-shadow: 0 5px 20px rgba(0,0,0,0.3);
+      animation: slideIn 0.4s ease;
+    }
+
+    @keyframes slideIn {
+      from { transform: translateY(-30px); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
 
     .modal-header {
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    .modal-body {
+      text-align: center;
+    }
+
+    .modal-body img {
+      width: 100%;
+      max-height: 350px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 15px;
     }
 
     .modal-footer {
       margin-top: 20px;
-      text-align: right;
+      text-align: center;
     }
 
     .close {
@@ -107,30 +141,29 @@
   <div id="sidebar">
     <h2>Radar FSHub</h2>
     <div class="info-box">
-      <p>Suivez nos vols en direct grâce à notre radar temps réel :</p>
-      <!-- Bouton avec icône radar -->
+      <p>Suivez nos vols en direct grâce à notre radar :</p>
       <button id="showRadarButton" class="toggle-button">
         <i class="fas fa-satellite-dish"></i> Afficher le Radar
       </button>
     </div>
   </div>
 
-  <!-- Contenu principal -->
-  <div id="content" style="flex-grow: 1; padding: 20px;">
-    <!-- Tu peux mettre ici des infos sur les vols, pilotes, météo, etc. -->
+  <div id="content">
+    <h1>Bienvenue chez AZH Virtual</h1>
+    <p>Suivez vos pilotes, planifiez des vols, et plus encore.</p>
   </div>
 
-  <!-- Modale -->
   <div id="myModal" class="modal">
     <div class="modal-content">
       <div class="modal-header">
-        Radar en Temps Réel
+        Radar de Vol en Direct
         <span class="close">&times;</span>
       </div>
       <div class="modal-body">
-        <p>Le radar est accessible dans une nouvelle fenêtre :</p>
+        <img src="https://i.imgur.com/YmWrZpv.jpeg" alt="Aperçu du radar" />
+        <p>Le radar est disponible dans une nouvelle fenêtre. Cliquez ci-dessous :</p>
         <a href="https://fshub.io/airline/AZH/radar" target="_blank" class="toggle-button">
-          <i class="fas fa-external-link-alt"></i> Ouvrir le Radar
+          <i class="fas fa-external-link-alt"></i> Ouvrir le Radar FSHub
         </a>
       </div>
       <div class="modal-footer">
