--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
     <h2>Radar FSHub</h2>
     <div class="info-box">
       <p>Suivez nos vols en direct :</p>
-      <!-- Lien vers le radar, ouvre dans un nouvel onglet -->
-      <a href="https://fshub.io/airline/AZH/radar" target="_blank" class="radar-button">
+      <!-- Lien pour ouvrir le radar dans une petite fenêtre -->
+      <button class="radar-button" onclick="openRadarPopup()">
         <i class="fas fa-satellite-dish"></i> Ouvrir le Radar
-      </a>
+      </button>
     </div>
   </div>
 
@@ -78,5 +78,12 @@
     <h1>Bienvenue chez AZH Virtual</h1>
     <p>Gérez vos opérations, suivez vos pilotes et restez connectés au réseau.</p>
   </div>
+
+  <script>
+    // Fonction pour ouvrir une fenêtre pop-up avec le radar
+    function openRadarPopup() {
+      window.open('https://fshub.io/airline/AZH/radar', 'RadarPopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
+    }
+  </script>
 </body>
 </html>
