--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Radar en Temps Réel</title>
-  <!-- Font Awesome pour l'icône -->
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
   <style>
     body {
@@ -60,15 +59,64 @@
       flex-grow: 1;
       padding: 20px;
     }
+
+    /* Style pour la fenêtre modale */
+    .modal {
+      display: none; /* Par défaut la modale est cachée */
+      position: fixed;
+      z-index: 1; /* Assurez-vous que la modale se trouve au-dessus de tout le contenu */
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.4); /* Fond semi-transparent */
+      overflow: auto;
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: 15% auto;
+      padding: 20px;
+      width: 80%;
+      max-width: 800px;
+      position: relative;
+    }
+
+    .modal-header {
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .modal-footer {
+      margin-top: 20px;
+      text-align: right;
+    }
+
+    .close {
+      color: #aaa;
+      font-size: 28px;
+      font-weight: bold;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
   <div id="sidebar">
     <h2>Radar FSHub</h2>
     <div class="info-box">
-      <p>Suivez nos vols en direct :</p>
-      <!-- Lien pour ouvrir le radar dans une petite fenêtre -->
-      <button class="radar-button" onclick="openRadarPopup()">
+      <p>Suivez les vols en temps réel en cliquant ci-dessous :</p>
+      <!-- Lien pour ouvrir la fenêtre modale -->
+      <button class="radar-button" onclick="openRadarModal()">
         <i class="fas fa-satellite-dish"></i> Ouvrir le Radar
       </button>
     </div>
@@ -79,10 +127,31 @@
     <p>Gérez vos opérations, suivez vos pilotes et restez connectés au réseau.</p>
   </div>
 
+  <!-- Fenêtre modale qui s'affiche lorsque l'on clique sur le bouton -->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <div class="modal-header">
+        Radar en Temps Réel
+        <span class="close" onclick="closeRadarModal()">&times;</span>
+      </div>
+      <div class="modal-body">
+        <iframe src="https://fshub.io/airline/AZH/radar" width="100%" height="400" frameborder="0"></iframe>
+      </div>
+      <div class="modal-footer">
+        <button class="radar-button" onclick="closeRadarModal()">Fermer</button>
+      </div>
+    </div>
+  </div>
+
   <script>
-    // Fonction pour ouvrir une fenêtre pop-up avec le radar
-    function openRadarPopup() {
-      window.open('https://fshub.io/airline/AZH/radar', 'RadarPopup', 'width=800,height=600,resizable=yes,scrollbars=yes');
+    // Ouvrir la fenêtre modale
+    function openRadarModal() {
+      document.getElementById('myModal').style.display = 'block';
+    }
+
+    // Fermer la fenêtre modale
+    function closeRadarModal() {
+      document.getElementById('myModal').style.display = 'none';
     }
   </script>
 </body>
