--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     <h2>Radar FSHub</h2>
     <div class="info-box">
       <p>Suivez les vols en temps réel en cliquant ci-dessous :</p>
-      <!-- Lien pour ouvrir la fenêtre modale -->
-      <button class="radar-button" onclick="openRadarModal()">
+      <!-- Lien pour ouvrir la petite fenêtre -->
+      <button class="radar-button" onclick="openRadarWindow()">
         <i class="fas fa-satellite-dish"></i> Ouvrir le Radar
       </button>
     </div>
@@ -127,31 +127,18 @@
     <p>Gérez vos opérations, suivez vos pilotes et restez connectés au réseau.</p>
   </div>
 
-  <!-- Fenêtre modale qui s'affiche lorsque l'on clique sur le bouton -->
-  <div id="myModal" class="modal">
-    <div class="modal-content">
-      <div class="modal-header">
-        Radar en Temps Réel
-        <span class="close" onclick="closeRadarModal()">&times;</span>
-      </div>
-      <div class="modal-body">
-        <iframe src="https://fshub.io/airline/AZH/radar" width="100%" height="400" frameborder="0"></iframe>
-      </div>
-      <div class="modal-footer">
-        <button class="radar-button" onclick="closeRadarModal()">Fermer</button>
-      </div>
-    </div>
-  </div>
-
   <script>
-    // Ouvrir la fenêtre modale
-    function openRadarModal() {
-      document.getElementById('myModal').style.display = 'block';
-    }
+    // Fonction pour ouvrir une petite fenêtre pop-up avec le lien du radar
+    function openRadarWindow() {
+      const radarUrl = "https://fshub.io/airline/AZH/radar";
+      const windowWidth = 800; // Largeur de la fenêtre pop-up
+      const windowHeight = 600; // Hauteur de la fenêtre pop-up
+      const windowLeft = (window.innerWidth - windowWidth) / 2; // Calcul pour centrer la fenêtre
+      const windowTop = (window.innerHeight - windowHeight) / 2; // Calcul pour centrer la fenêtre
+      const windowOptions = `width=${windowWidth}, height=${windowHeight}, top=${windowTop}, left=${windowLeft}, resizable=yes, scrollbars=yes`;
 
-    // Fermer la fenêtre modale
-    function closeRadarModal() {
-      document.getElementById('myModal').style.display = 'none';
+      // Ouvrir la fenêtre pop-up avec les options spécifiées
+      window.open(radarUrl, "Radar", windowOptions);
     }
   </script>
 </body>
